# gw2-progression

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.trainer  GAP_ANALYSIS.md  PHASED_DEV_PLAN.md  README.md  SUMMARY.md  SYSTEM_DESIGN.md  VIZ_EVALUATION.md  alembic.ini  deploy.sh  docker-compose.expert-ai.yml  docker-compose.prod.yml  docker-compose.yml  domain_graph.yaml  pyproject.toml  semantic_graph.json  start_pipeline.py
alembic/: env.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: GW2_Cognitive_OS_Final_Unified_Spec_v1.md  GW2_Cognitive_OS_Unified_Spec_v1.md  GW2_DATA_MESH_ALIGNMENT.md  GW2_Expert_AI_Full_Production_Repo_Codex.md  GW2_Expert_AI_Training_Infrastructure_Codex.md  GW2_Ontology_Runtime_Kernel_v1_Codex.md  GW2_Synthetic_Simulation_Engine_Codex_v1.md  USER_GUIDE.md  ai-lab-productization-phased-plan.md  api-governance-and-release-gates.md  architecture-code-graph-analysis.md  architecture-code-graph-diff-2026-07-01.md  architecture-maturity-report.md  code-graph-analysis-2026-06-27.md  code-graph-maturity-redundancy-2026-07-01.md  codebase-analysis.md  expert-ai-training-infrastructure.md  gw2_single_key_bootstrap_opencode_v1.md  gw2radar_lovable_player_intent_builder_codex_spec.md  handoff-summary-2026-06-27.md  icon-system-spec.md  implementation-maturity-assessment-2026-07-01.md  ontology-runtime-execution-finalization-v1-implementation.md  ontology-runtime-kernel-v2-foundry-implementation.md  ontology-runtime-system-convergence-vfinal-assessment.md  ontology-runtime-v3-execution-layer-implementation.md
scripts/: analyze_ontology_maturity.py  bootstrap_expert_ai.py  lifecycle_character_training.py  ontology_runtime_smoke.py  recipe_knowledge_sample.py  setup-https.sh  start-expert-ai-docker.sh  test_mesh_health.py  test_online_fetch.py  test_trainer_standalone.py  train_continue.py  train_final_round.py  train_with_real_data.py
tests/: conftest.py  test_ai_lab_adapter.py  test_analyzer.py  test_api_governance.py  test_api_integration.py  test_architecture_convergence.py  test_auth_service_full.py  test_benchmark.py  test_cache.py  test_cognitive_os.py  test_commerce.py  test_commerce_idempotency_db.py  test_core_player_smoke.py  test_crafting.py  test_crafting_plan.py  test_data_expansion_contract.py  test_data_mesh_integration.py  test_data_mesh_v1.py  test_database_core.py  test_delivery.py  test_delivery_outbox.py  test_delta.py  test_e2e.py  test_e2e_playwright.py  (+42 more)
(+316 files in other folders)
