[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gw2-progression"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "aiosqlite>=0.20",
    "cryptography>=41",
    "stripe>=10.0",
    "celery>=5.4",
    "neo4j>=5.20",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
training = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["--ignore=tests/e2e", "--ignore=tests/debug_e2e.py", "--ignore=tests/fix_deprecation.py"]

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py"]

[tool.coverage.report]
fail_under = 69
